fix: use get(0) instead of getFirst for Java 17 support